--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.6",
-    "@rauschma/stringio": "^1.4.0",
     "debug": "^4.1.1",
-    "lodash": "^4.17.15",
-    "wtfnode": "^0.9.1"
+    "get-stream": "^6.0.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
