--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@babel/runtime": "^7.14.6",
     "debug": "^4.1.1",
     "get-stream": "^6.0.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "node-firebird": "https://github.com/hgourvest/node-firebird#master"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -42,18 +43,17 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
+    "@babel/eslint-parser": "^7.15.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.4.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "knex": "^0.95.9",
-    "node-firebird": "https://github.com/hgourvest/node-firebird#master",
     "prettier": "^2.2.1"
   },
   "peerDependencies": {
-    "knex": "^0.95.9",
-    "node-firebird": "https://github.com/hgourvest/node-firebird#master"
+    "knex": "^0.95.9"
   },
   "husky": {
     "hooks": {
@@ -61,6 +61,6 @@
     }
   },
   "files": [
-    "lib/index.js"
+    "lib"
   ]
 }
