👷 Add test coverage into github actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,11 +48,6 @@ jobs:
       run: |
         sudo mkdir coverage
         sudo chown -R firebird:firebird coverage
-        sudo chmod 777 coverage
+        sudo chmod -R 777 coverage
         sg firebird -c "yarn global add env-cmd; env-cmd -f /opt/firebird/SYSDBA.password yarn test"
-
-    - name: Test Coverage
-      uses: artiomtr/jest-coverage-report-action@v2.0-rc.4
-      with:
-        coverage-file: ./coverage/coverage-final.json
-        base-coverage-file: ./coverage/coverage-final.json
+        bash <(curl -s https://codecov.io/bash)
