--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "debug": "^4.1.1",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.15",
-    "node-firebird": "https://github.com/hgourvest/node-firebird#master"
+    "node-firebird": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
