--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^26.1.3",
-    "husky": "^8.0.1",
+    "husky": "7.0.4",
     "jest": "^28.1.3",
     "knex": "^0.95.15",
     "prettier": "^2.2.1"
