--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "@babel/runtime": "^7.14.6",
     "debug": "^4.1.1",
     "get-stream": "^6.0.1",
-    "lodash": "^4.17.15",
-    "node-firebird": "^1.0.0"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -50,10 +49,12 @@
     "husky": "8.0.1",
     "jest": "^29.0.1",
     "knex": "^2.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "node-firebird": "^1.1.1"
   },
   "peerDependencies": {
-    "knex": ">=0.95.15"
+    "knex": ">=0.95.15",
+    "node-firebird": "^1.1.1"
   },
   "resolutions": {
     "set-value": ">=4.0.1"
