--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knex-firebird-dialect",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "Knex dialect for Firebird",
   "main": "lib/index.js",
   "scripts": {
@@ -49,8 +49,8 @@
     "husky": "8.0.1",
     "jest": "^29.0.1",
     "knex": "^2.2.0",
-    "prettier": "^2.2.1",
-    "node-firebird": "^1.1.1"
+    "node-firebird": "^1.1.1",
+    "prettier": "^2.2.1"
   },
   "peerDependencies": {
     "knex": ">=0.95.15",
